--- a/templates/form.html
+++ b/templates/form.html
@@ -10,7 +10,7 @@
 
     <div class="d-flex justify-content-start flex-wrap">
 
-        <form action="{% url 'Weather Insert' %}" method="post" enctype="multipart/form-data">
+        <form action="{% url 'Book Insert' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="col-md-12 p-2">
                 <div class="card">
