fix: display templates
fixed communication problem to display the template

--- a/templates/main.html
+++ b/templates/main.html
@@ -19,9 +19,9 @@
         </a>
 
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="{% url 'Book Insert' %}" class="nav-link">Book</a></li>
-          <li class="nav-item"><a href="{% url 'Book Generate' %}" class="nav-link">R. Book</a></li>
-            <li class="nav-item"><a href="{% url 'Book Reset' %}" class="nav-link">Reset</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Book</a></li>
+          <li class="nav-item"><a href="" class="nav-link">R. Book</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Reset</a></li>
         </ul>
     </header>
     <main>
