--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -6,8 +6,6 @@
 
 {% block content %}
 
-    <h1>Hello World</h1>
-
     <div class="d-flex justify-content-start flex-wrap">
 
         {% for book in books %}
@@ -22,6 +20,7 @@
                     Horário: {{ book.time }} <br />
                     Status: {{ book.status }}
                 </p>
+                <p>{{data}}</p>
             </div>
           </div>
         </div>
