--- a/templates/main.html
+++ b/templates/main.html
@@ -21,7 +21,7 @@
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="" class="nav-link">Book</a></li>
           <li class="nav-item"><a href="" class="nav-link">R. Book</a></li>
-            <li class="nav-item"><a href="" class="nav-link">Reset</a></li>
+          <li class="nav-item"><a href="{% url 'deletebooks' id='Sala ADS-1' %}" class="nav-link">delete</a></li>
             <li class="nav-item"><a href="{% url 'generatebooks' %}" class="nav-link">Generate</a></li>
         </ul>
     </header>
