--- a/templates/main.html
+++ b/templates/main.html
@@ -22,7 +22,7 @@
           <li class="nav-item"><a href="" class="nav-link">Book</a></li>
           <li class="nav-item"><a href="" class="nav-link">R. Book</a></li>
             <li class="nav-item"><a href="" class="nav-link">Reset</a></li>
-            <li class="nav-item"><a href="{% url 'generatebooks' %}" class="nav-link">Generate</a></li>
+            <li class="nav-item"><a href="{% url 'create classes' %}" class="nav-link">Generate</a></li>
         </ul>
     </header>
     <main>
