--- a/templates/main.html
+++ b/templates/main.html
@@ -19,9 +19,7 @@
         </a>
 
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="" class="nav-link">Book</a></li>
-          <li class="nav-item"><a href="" class="nav-link">R. Book</a></li>
-            <li class="nav-item"><a href="" class="nav-link">Reset</a></li>
+          <li class="nav-item"><a href="{% url 'booklist' %}" class="nav-link">Book</a></li>
             <li class="nav-item"><a href="{% url 'create classes' %}" class="nav-link">Create</a></li>
           <li class="nav-item"><a href="{% url 'deletebooks' id='Sala ADS-1' %}" class="nav-link">delete</a></li>
             <li class="nav-item"><a href="{% url 'generatebooks' %}" class="nav-link">Generate</a></li>
